# mem-kv-cpp

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md  benchmarks.md  concurrency_model.md  ml-systems.md  persistence.md  protocol.md
scripts/: bench.sh
src/: main.cpp
src/batching/: write_batcher.cpp  write_batcher.h
src/concurrency/: thread_pool.cpp  thread_pool.h
src/metrics/: metrics.h
src/net/: connection.cpp  connection.h  server.cpp  server.h
src/protocol/: command.h  parser.cpp  parser.h
src/storage/: kv_store.cpp  kv_store.h
src/tools/: benchmark.cpp
